추천상품 코딩

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
           </ul>
 
           <ol class="rank_container">
+            <!-- 스크립트에서 이미지, 텍스트 생성 -->
+            <!-- defalut는 누적판매량 -->
             <li class="rank_item">
               <div class="img_box"></div>
               <div class="text_box">
@@ -155,13 +157,99 @@
               </div>
             </li>
           </ol>
-          
-
-
         </div>
       </section>
       
+      <section id="recommendPrd" class="section">
+        <div class="container">
+          <div class="flex_container space_between align_center">
+            <h2 class="section_tit">
+              추천 상품
+            </h2>
+            <a href="#" class="link_more">더보기 +</a>
+          </div>
 
+          <ul class="recommend_container">
+            <li class="recommend_item">
+              <div class="img_box"></div>
+              <div class="tag_container"></div>
+              <h3 class="tit_container"></h3>
+              <div class="price_container">
+                <div class="rate"></div>
+                <div class="price_box">
+                  <div class="price_before"></div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </li>
+            <li class="recommend_item">
+              <div class="img_box"></div>
+              <div class="tag_container"></div>
+              <h3 class="tit_container"></h3>
+              <div class="price_container">
+                <div class="rate"></div>
+                <div class="price_box">
+                  <div class="price_before"></div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </li>
+            <li class="recommend_item">
+              <div class="img_box"></div>
+              <div class="tag_container"></div>
+              <h3 class="tit_container"></h3>
+              <div class="price_container">
+                <div class="rate"></div>
+                <div class="price_box">
+                  <div class="price_before"></div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </li>
+            <li class="recommend_item">
+              <div class="img_box"></div>
+              <div class="tag_container"></div>
+              <h3 class="tit_container"></h3>
+              <div class="price_container">
+                <div class="rate"></div>
+                <div class="price_box">
+                  <div class="price_before"></div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+
+      <section id="monthlyPrd" class="section">
+        <div class="container">
+          <h2 class="section_tit">이달의 여행지</h2>
+
+          <div id="bannerSlide" class="banner_slide">
+            <div class="slide_item">
+              <h3 class="banner_tit">가정의 달 5월을 맞아 준비한<br>특별한 어린이날 관광지</h3>
+              <p class="banner_sub_tit">가족과 함께 하는 특별한 시간</p>
+            </div>
+
+            <div class="slide_item">
+              <h3 class="banner_tit">호국보훈의 달 6월을 맞아 준비한<br>특별한 현충일 관광지</h3>
+              <p class="banner_sub_tit">군인과 함께 하는 특별한 시간</p>
+            </div>
+
+            <div class="slide_item">
+              <h3 class="banner_tit">하반기 시작의 달 7월을 맞아 준비한<br>특별한 초복 관광지</h3>
+              <p class="banner_sub_tit">치킨과 함께 하는 특별한 시간</p>
+            </div>
+
+            <div class="slide_item">
+              <h3 class="banner_tit">광복절의 달 8월을 맞아 준비한<br>특별한 광복절 관광지</h3>
+              <p class="banner_sub_tit">안중근과 함께 하는 특별한 시간</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
