스크립트 수정

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                 </div>
               </div>
             </li>
+
             <li class="recommend_item">
               <div class="img_box"></div>
               <div class="tag_container"></div>
@@ -194,6 +195,7 @@
                 </div>
               </div>
             </li>
+
             <li class="recommend_item">
               <div class="img_box"></div>
               <div class="tag_container"></div>
@@ -206,7 +208,34 @@
                 </div>
               </div>
             </li>
+
             <li class="recommend_item">
+              <div class="img_box"></div>
+              <div class="tag_container"></div>
+              <h3 class="tit_container"></h3>
+              <div class="price_container">
+                <div class="rate"></div>
+                <div class="price_box">
+                  <div class="price_before"></div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </li>
+
+            <li class="recommend_item mobile_hide">
+              <div class="img_box"></div>
+              <div class="tag_container"></div>
+              <h3 class="tit_container"></h3>
+              <div class="price_container">
+                <div class="rate"></div>
+                <div class="price_box">
+                  <div class="price_before"></div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </li>
+
+            <li class="recommend_item mobile_hide">
               <div class="img_box"></div>
               <div class="tag_container"></div>
               <h3 class="tit_container"></h3>
