--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>투어패스몰 | 전국으로 놀러가자!</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
     <link rel="stylesheet" href="css/reset.css">
@@ -17,14 +16,14 @@
 
         <a href="">
           <h1 class="logo">
-            <span class="invisible">투어패스몰</span>
+            <span class="hide">투어패스몰</span>
           </h1>
         </a>
 
         <div class="serch_wrap">
           <input type="text" name="" id="headerSearchPrd" class="inputSearch" placeholder="어린이날 특별기획전">
           <button type="button" class="btn_search">
-            <span class="invisible">검색</span>
+            <span class="hide">검색</span>
           </button>
         </div>
 
@@ -32,7 +31,7 @@
         <button type="button" class="btn_cart">
           <!-- 장바구니 갯수는 .btn_cart:after의 content:'';안에 들어감. -->
           <!-- 0일땐 content: none; 10개 이상부터는 9+로 표기 -->
-          <span class="invisible">장바구니 바로가기</span>
+          <span class="hide">장바구니 바로가기</span>
         </button>
 
       </header>
@@ -109,10 +108,10 @@
             <li data-tabname="grade">평점순</li>
           </ul>
 
-          <ol class="rank_container">
+          <ol class="rank_container item_container">
             <!-- 스크립트에서 이미지, 텍스트 생성 -->
             <!-- defalut는 누적판매량 -->
-            <li class="rank_item">
+            <li class="rank_item item_box">
               <div class="img_box"></div>
               <div class="text_box">
                 <h3 class="prd_tit"></h3>
@@ -123,7 +122,7 @@
                 </div>
               </div>
             </li>
-            <li class="rank_item">
+            <li class="rank_item item_box">
               <div class="img_box"></div>
               <div class="text_box">
                 <h3 class="prd_tit"></h3>
@@ -134,7 +133,7 @@
                 </div>
               </div>
             </li>
-            <li class="rank_item">
+            <li class="rank_item item_box">
               <div class="img_box"></div>
               <div class="text_box">
                 <h3 class="prd_tit"></h3>
@@ -145,7 +144,7 @@
                 </div>
               </div>
             </li>
-            <li class="rank_item">
+            <li class="rank_item item_box">
               <div class="img_box"></div>
               <div class="text_box">
                 <h3 class="prd_tit"></h3>
@@ -256,33 +255,63 @@
         <div class="container">
           <h2 class="section_tit">이달의 여행지</h2>
 
-          <div id="bannerSlide" class="banner_slide">
-            <div class="slide_item">
-              <h3 class="banner_tit">가정의 달 5월을 맞아 준비한<br>특별한 어린이날 관광지</h3>
-              <p class="banner_sub_tit">가족과 함께 하는 특별한 시간</p>
+          <div class="banner_container">
+
+            <div id="monthlyPrdSlide" class="banner_slide">
+              <div class="slide_item" data-slidename="202305">
+                <h3 class="banner_tit">가정의 달 5월을 맞아 준비한<br>특별한 어린이날 관광지</h3>
+                <p class="banner_sub_tit">가족과 함께 하는 특별한 시간</p>
+              </div>
+
+              <div class="slide_item" data-slidename="202306">
+                <h3 class="banner_tit">호국보훈의 달 6월을 맞아<br>준비한 특별한 현충일 관광지</h3>
+                <p class="banner_sub_tit">군인과 함께 하는 특별한 시간</p>
+              </div>
+
+              <div class="slide_item" data-slidename="202307">
+                <h3 class="banner_tit">하반기 시작의 달 7월을 맞아<br>준비한 특별한 초복 관광지</h3>
+                <p class="banner_sub_tit">치킨과 함께 하는 특별한 시간</p>
+              </div>
+
+              <div class="slide_item" data-slidename="202308">
+                <h3 class="banner_tit">광복절의 달 8월을 맞아 준비한<br>특별한 광복절 관광지</h3>
+                <p class="banner_sub_tit">안중근과 함께 하는 특별한 시간</p>
+              </div>
             </div>
 
-            <div class="slide_item">
-              <h3 class="banner_tit">호국보훈의 달 6월을 맞아 준비한<br>특별한 현충일 관광지</h3>
-              <p class="banner_sub_tit">군인과 함께 하는 특별한 시간</p>
-            </div>
-
-            <div class="slide_item">
-              <h3 class="banner_tit">하반기 시작의 달 7월을 맞아 준비한<br>특별한 초복 관광지</h3>
-              <p class="banner_sub_tit">치킨과 함께 하는 특별한 시간</p>
-            </div>
-
-            <div class="slide_item">
-              <h3 class="banner_tit">광복절의 달 8월을 맞아 준비한<br>특별한 광복절 관광지</h3>
-              <p class="banner_sub_tit">안중근과 함께 하는 특별한 시간</p>
-            </div>
+            
+            <ol class="monthly_container item_container">
+              <!-- 스크립트에서 이미지, 텍스트 생성 -->
+              <!-- defalut는 누적판매량 -->
+              <li class="monthly_item item_box">
+                <div class="img_box"></div>
+                <div class="text_box">
+                  <h3 class="prd_tit"></h3>
+                  <div class="price_box">
+                    <span class="rate"></span>
+                    <span class="price"></span>
+                    <span class="price_before"></span>
+                  </div>
+                </div>
+              </li>
+              <li class="monthly_item item_box">
+                <div class="img_box"></div>
+                <div class="text_box">
+                  <h3 class="prd_tit"></h3>
+                  <div class="price_box">
+                    <span class="rate"></span>
+                    <span class="price"></span>
+                    <span class="price_before"></span>
+                  </div>
+                </div>
+              </li>
+            </ol>
           </div>
         </div>
       </section>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
   </body>
